--- a/client/index.html
+++ b/client/index.html
@@ -25,11 +25,19 @@
   <body>
     <div id="main">
       <h1>chatterbox</h1>
+      <section id="friendList"> </section>
       <select id="roomSelect">
         <option selected value="all">All</option>
 <!--         <option value="beverages">Beverages</option>
         <option value="snacks">Snacks</option> -->
       </select>
+      <form id="messageInput">
+      
+      <input type="text" placeholder="type message content here" name="text">
+      <br><br>
+      <input type="text" placeholder="What's your username" name="username">
+      <input type="submit"></input>
+      </form>
     </div>
     <div id="chats"></div>
   </body>
