Successfully send/receive, render rooms, add friends; need to bold friends' messages

--- a/client/index.html
+++ b/client/index.html
@@ -32,9 +32,12 @@
         <option value="snacks">Snacks</option> -->
       </select>
       <form id="messageInput">
-        <input type="text" placeholder="type message content here" name="text">
-        <br><br>
+        <p> Username </p>
         <input type="text" placeholder="What's your username" name="username">
+        <br><br>
+        <p>Message here</p>
+        <input type="text" placeholder="Type message here" name="text">
+        <input type="text" placeholder="Room?" name="roomname">
         <input type="submit"></input>
       </form>
     </div>
